--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ orbs:
 jobs:
   yarn-install:
     docker:
-      - image:  circleci/node:12.16.1
+      - image: circleci/node:14.3.0
     steps:
       - checkout
       - restore_cache:
@@ -29,12 +29,65 @@ jobs:
 
   lint-js:
     docker:
-      - image: circleci/node:12.16.1
+      - image: circleci/node:14.3.0
     steps:
       - checkout
       - attach_workspace:
           at: ~/project
       - run: yarn lint:js
+
+  test:
+    docker:
+      - image: circleci/node:14.3.0
+    steps:
+      - checkout
+      - attach_workspace:
+          at: ~/project
+      - run: |
+          sudo apt-get update && sudo apt-get install --yes --no-install-recommends \
+            gconf-service \
+            libasound2 \
+            libatk1.0-0 \
+            libatk-bridge2.0-0 \
+            libc6 \
+            libcairo2 \
+            libcups2 \
+            libdbus-1-3 \
+            libexpat1 \
+            libfontconfig1 \
+            libgcc1 \
+            libgconf-2-4 \
+            libgdk-pixbuf2.0-0 \
+            libglib2.0-0 \
+            libgtk-3-0 \
+            libnspr4 \
+            libpango-1.0-0 \
+            libpangocairo-1.0-0 \
+            libstdc++6 \
+            libx11-6 \
+            libx11-xcb1 \
+            libxcb1 \
+            libxcomposite1 \
+            libxcursor1 \
+            libxdamage1 \
+            libxext6 \
+            libxfixes3 \
+            libxi6 \
+            libxrandr2 \
+            libxrender1 \
+            libxss1 \
+            libxtst6 \
+            ca-certificates \
+            fonts-liberation \
+            libappindicator1 \
+            libnss3 \
+            lsb-release \
+            xdg-utils \
+            wget \
+      - run:
+          command: yarn start
+          background: true
+      - run: yarn test
 
 workflows:
   version: 2
@@ -48,3 +101,8 @@ workflows:
       - lint-js:
           requires:
             - yarn-install
+      - test:
+          requires:
+            # Only run tests if linting is ok
+            - lint-docker
+            - lint-js
