--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,10 @@
 {
     "root": true,
+    "parser": "babel-eslint",
     "extends": "@thetribe",
     "rules": {
         "import/extensions": ["error", {
-            "mjs": "always"
+            "js": "always"
         }]
     }
 }
