Add BASE_URL env variable for tests

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,3 +5,5 @@ services:
         build: .
         ports:
             - 3000:3000
+        environment:
+            BASE_URL: http://html-to-pdf:3000
