--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
       - attach_workspace:
           at: ~/project
       - run: |
-          sudo apt-get update && sudo apt-get install --yes --no-install-recommends \
+          apt-get update && apt-get install --yes --no-install-recommends \
             ca-certificates \
             fonts-liberation \
             libappindicator3-1 \
