--- a/package.json
+++ b/package.json
@@ -17,12 +17,11 @@
     "eslint": "^8.14.0",
     "eslint-plugin-import": "^2.26.0",
     "jest": "^28.0.3",
-    "node-fetch": "^2.6.0",
     "pdfjs-dist": "^2.13.216"
   },
   "scripts": {
     "lint:js": "eslint src",
     "start": "node src",
-    "test": "jest"
+    "test": "node --experimental-fetch ./node_modules/.bin/jest"
   }
 }
