--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,6 +13,8 @@ jobs:
           node-version: '16.x'
           cache: 'yarn'
       - run: yarn install --frozen-lockfile
+        env:
+          PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 'true'
       - name: lint
         run: yarn lint:js
 
@@ -36,6 +38,8 @@ jobs:
           node-version: '16.x'
           cache: 'yarn'
       - run: yarn install --frozen-lockfile
+        env:
+          PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 'true'
       - uses: docker/setup-buildx-action@v1
       - uses: docker/build-push-action@v3
         with:
